cos[atan(z)]=1/sqrt(1+z^2)

--- a/abcstat/makefile
+++ b/abcstat/makefile
@@ -25,6 +25,7 @@ FILE_SRC  =                               \
   ../common/dimensionality_reduction.tex  \
   ../common/dtft.tex                      \
   ../common/expectation.tex               \
+  ../common/harTrig.tex                   \
   ../common/kl_seq.tex                    \
   ../common/moment_estimation.tex         \
   ../common/model_estimation.tex          \
