Chi-Squared distribution with 1 degree of freedom

--- a/common/math/graphics/pdfs/makefile
+++ b/common/math/graphics/pdfs/makefile
@@ -100,7 +100,7 @@ FILE_GRP  =              \
   pdf_Normal_2overSqrtpi.pdf          \
   pdf_Normal_1_quadRoot1over2pi.pdf   \
   pdf_Uniform_0-1.pdf                 \
-  pdf_Uniform12_Xsquared.pdf          \
+  pdf_Normal01_ChiSq-k1.pdf \
   pulseabc.pdf          \
   pulseabcft.pdf        \
   pz_minphase.pdf       \
